feat: layout menu

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,4 +1,14 @@
 // 设置scss全局变量
 
 // 定义项目主题颜色
-$base-color:red
+// $base-color:red
+
+// 左侧菜单
+$base-menu-width:260px;
+$base-menu-background:#001529;
+// logo
+$base-menu-logo-height:50px;
+
+
+// 顶部导航
+$base-tabbar-height:50px;
