--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,13 @@
 
 // 滚动条外观设置
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 ::-webkit-scrollbar-track {
   background:#ccc;
 }
 ::-webkit-scrollbar-thumb{
-    width: 10px;
-    background: #6495ed;
+    width: 8px;
+    background: #ccc;
     border-radius: 8px;
 }
